<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="newmbewb">늄븁</string>
    <string name="hello">Hello World, isb!</string>
    <string name="app_name">Isb</string>
    <string name="id">ID</string>
    <string name="pw">PW</string>
    <string name="remember">Remember me</string>
    <string name="start">Go!</string>
    <string name="stop">Log out</string>
    <string name="goSurf">Go Surfing</string>
	<string name="Diary">Diary</string>
	<string name="Mail">Mail</string>
	<string name="Preference">Preference</string>
    
    <string name="compose">New Thread</string>
    <string name="composeTitleHint">Title</string>
    <string name="composeContentHint">Content</string>

	<string name="write">Write</string>
	<string name="reply">Reply</string>
	<string name="reply_copytext">본문을 복사할까요?</string>
	<string name="send_mail">Write</string>
	<string name="delete">Delete</string>
	<string name="cancle">Cancel</string>
	<string name="delete_confirm">정말로 지우시겠습니까?</string>
	<string name="inverse">Inverse</string>
	<string name="mark">Mark</string>
	<string name="edit">Edit</string>
	<string name="reader">Readers</string>

<!--  for read board  -->
	<string name="readBoardTitle">Read Board</string>
	<string name="readBoardPrevPage"> &gt;&gt;</string>
	<string name="readBoardNextPage">&lt;&lt; </string>
<!--  for read board  -->
	
<!--  for read Thread  -->	
	<string name="readThreadTitle">Read Threads</string>
	<string name="readThreadPrev"> &lt;Prev </string>
	<string name="readThreadNext"> Next&gt; </string>
<!--  for read Thread  -->


<!--  for board list -->	
	<string name="boardListTitle">Select board</string>
	<string name="noEntry">게시판 목록이 없습니다.</string>
	<string name="query">Query</string>
	<string name="refresh">Refresh</string>
	<string name="favorite">Toggle Favorite</string>
	<string name="myboard">Toggle Myboard</string>
	<string name="list_favorite_only">Show Favorite Only</string>
	<string name="list_new">Search New Post</string>
	<string name="list_all">Show All</string>
<!--  for board list -->

<!--  for Compose -->
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit Draft</string>
    <string name="menu_send">Send Draft</string>
    <string name="menu_insert">Add Draft</string>
    <string name="menu_revert">Revert</string>
    <string name="menu_discard">Discard</string>
    <string name="menu_finish">Submit</string>
	<string name="menu_save">Save</string>

    <string name="resolve_edit">Edit Draft</string>
    <string name="resolve_title">Edit title</string>  

    <string name="title_create">Create draft</string>
    <string name="title_edit">Edit draft</string>
	<string name="title_notes_list">Isb Drafts</string>   
	<string name="title_note">Note</string>  
	<string name="title_edit_title">Note title:</string>
		
	<string name="button_ok">OK</string>
	<string name="button_cancel">CANCEL</string>  
	<string name="error_title">Error</string>
	<string name="error_message">Error loading note</string>
<!--  for Compose -->
	<string name="check_version">최신버전 확인</string>
	<string name="info">information</string>
	<string name="user">users</string>
	<string name="viewUserTItle">View Users</string>
	<string name="info_content"><![CDATA[Patch note at <a href="https://github.com/clover3/isb/wiki/Patch-Note">Github Wiki</a><br/><br/>
		Download from <a href="https://play.google.com/store/apps/details?id=com.postech.isb">Google Play</a><br/><br/>
	    Source Code available at <a href="https://github.com/clover3/isb">Github</a>]]></string>
	<string name="OK">OK</string>
	<!--  for Notice -->
	<string name="notice_title">업데이트</string>
	<string name="notice_content">* 답글을 달 때 본문을 복사할 것인지 선택할 수 있습니다.\n
	* 연결이 끊긴 경우 자동으로 다시 로그인 하도록 Preference에서 설정할 수 있습니다.\n
	* Query 기능을 사용할 수 있습니다.</string>

	<!-- for Preference -->
	<string name="preference_label_menuoption_menubutton">Menu button</string>
	<string name="preference_label_menuoption_swipe">Swipe up</string>
	<string name="preference_label_menuoption_actionbar">Top of windows</string>

	<string name="preference_summary_menuoption_menubutton">Use the menu button only</string>
	<string name="preference_summary_menuoption_swipe">Swipe up from the bottom of the screen</string>
	<string name="preference_summary_menuoption_actionbar">Show menus above windows</string>

	<string name="preference_value_menuoption_menubutton">menubutton</string>
	<string name="preference_value_menuoption_swipe">swipe</string>
	<string name="preference_value_menuoption_actionbar">actionbar</string>
	<string name="preference_value_menuoption_not_selected">not_selected</string>
</resources>
