<?xml version="1.0" encoding="utf-8"?>    
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff">
	    
	<ImageView
		android:id="@+id/logoView"
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    	android:layout_marginTop="25px"
    	android:layout_alignParentRight="true"
    	android:layout_marginRight="5dp"
        android:src="@drawable/logo"
        android:scaleType="center"/>

	<RelativeLayout
		android:id="@+id/logedIn"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="30px"
	    android:layout_below="@id/logoView"
	    android:visibility="invisible">
	    <TextView
	    	android:id="@+id/helloment"
	    	android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:text="Hello,"
	  		android:gravity="center"
	  		android:textSize="15sp"
	  		android:textColor="#000"/>
	    <TextView
	    	android:id="@+id/currentId"
	    	android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:layout_below = "@id/helloment"
	  		android:text="ID"
	  		android:textSize="30sp"
	  		android:textStyle="bold"
	  		android:textColor="#000"
	  		android:gravity="center"/>
	  		
	  	<Button
	        android:id="@+id/goSurf"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10sp"
	        android:layout_below="@id/currentId"        
	        android:text="@string/goSurf"/>
        
    	<Button
	        android:id="@+id/logoutBtn"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10sp"
	        android:layout_below="@id/goSurf"        
	        android:text="@string/stop"/>
	        
	</RelativeLayout>
	
	<RelativeLayout
		android:id="@+id/idPwInput"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/logoView">
	    
	    <TextView
	    	android:id="@+id/labelId"
	    	android:layout_width="35px"
	  		android:layout_height="wrap_content"
	  		android:layout_marginLeft="15dp"
	  		android:layout_marginTop="20dp"
	  		android:paddingTop="12dp"
	  		android:text="@string/id"
	  		android:textColor="#000"/>
	  		
	  	<EditText
	  		android:id="@+id/loginId"
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:layout_marginRight="10dp"
	  		android:layout_alignTop="@id/labelId"
	  		android:layout_toRightOf="@id/labelId"
	  		android:lines="1"
	  		android:inputType="text"
	  		android:nextFocusDown="@+id/loginPw"/>
	
	    <TextView
	    	android:id="@+id/labelPw"
	    	android:layout_width="35px"
	  		android:layout_height="wrap_content"
	  		android:layout_below="@id/labelId"
	  		android:layout_marginLeft="15dp"
	  		android:layout_marginTop="20dp"
	  		android:paddingTop="12dp"
	  		android:text="@string/pw"
	  		android:textColor="#000"/>
	  		
	  	<EditText
	  		android:id="@+id/loginPw"
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:layout_marginRight="10dp"
	  		android:layout_alignTop="@id/labelPw"
	  		android:layout_toRightOf="@id/labelPw"
	  		android:password="true"
	  		android:lines="1"
	  		android:inputType="text"
	  		android:nextFocusDown="@+id/loginBtn"/>
	  		
	  	<CheckBox
	  		android:id="@+id/rememberIdPw"
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:layout_below="@id/loginPw"
	  		android:layout_alignLeft="@id/loginPw"
	  		android:text="@string/remember"
	  		android:textColor="#000"
	  		android:background="@drawable/btn_check_background" 
	  		android:button="@drawable/btn_check"/>
	  		
	  	<Button
	        android:id="@+id/loginBtn"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/rememberIdPw"
	        android:layout_marginTop="15sp"
	        android:layout_centerHorizontal="true"        
	        android:text="@string/start"/>
  	</RelativeLayout>
                
</RelativeLayout>