<?xml version="1.0" encoding="utf-8"?>    
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff">
	    
	<ImageView
		android:id="@+id/logoView"
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    	android:layout_marginTop="25px"
    	android:layout_alignParentRight="true"
    	android:layout_marginRight="5dp"
        android:src="@drawable/logo_home"
        android:scaleType="center"/>
	<RelativeLayout
		android:id="@+id/mybbs"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="30px"
		android:layout_below="@id/logoView">
	    <TextView
	    	android:id="@+id/helloment"
	    	android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:text="Hello,"
	  		android:gravity="center"
	  		android:textSize="15sp"
	  		android:textColor="#000"/>
		<ImageView
			android:id="@+id/mailIcon"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below = "@id/helloment"
			android:gravity="center"
			android:src="@drawable/email_green_32"
			android:visibility="gone"/>
	    <TextView
	    	android:id="@+id/currentId"
	    	android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:layout_below = "@id/mailIcon"
	  		android:text="MyBBS"
	  		android:textSize="30sp"
	  		android:textStyle="bold"
	  		android:textColor="#000"
	  		android:gravity="center"/>
	  		
		<Button
			android:id="@+id/diary"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10sp"
			android:layout_below="@id/currentId"
			android:text="@string/Diary"/>

		<Button
			android:id="@+id/mail"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10sp"
			android:layout_below="@id/diary"
			android:text="@string/Mail"/>

		<Button
			android:id="@+id/preference"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10sp"
			android:layout_below="@id/mail"
			android:text="@string/Preference"/>
	        
	</RelativeLayout>

</RelativeLayout>